Fix horizontal overflow in sphinx's own theme

--- a/doc/_themes/sphinx13/static/sphinx13.css
+++ b/doc/_themes/sphinx13/static/sphinx13.css
@@ -25,6 +25,7 @@ body {
     width: 100%;
     background-color: var(--colour-sphinx-blue);
     padding: 10px 20px;
+    box-sizing: border-box;
 }
 
 .pageheader a {
